# amap-collector-py

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
amap_collector/cli/: params.py
amap_collector/core/: client.py  collector.py  endpoint.py  parser.py  router.py  validations.py
amap_collector/core/hn/: client.py  endpoint.py  parser.py  validations.py
amap_collector/core/ia44/: client.py  endpoint.py  parser.py  validations.py
amap_collector/core/idf/: client.py  endpoint.py  parser.py  validations.py
amap_collector/core/whole/: client.py  endpoint.py  parser.py  validations.py
amap_scraper/cli/: params.py
amap_scraper/core/: client.py  endpoint.py  parser.py  validations.py
cli/: output.py  params.py
core/: client.py  endpoint.py  parser.py  validations.py
tests/cli/: test_output.py  test_params.py
tests/core/: test_client.py  test_collector.py  test_endpoint.py  test_parser.py  test_router.py  test_validations.py
tests/core/hn/: test_client.py  test_endpoint.py  test_parser.py  test_validations.py
tests/core/ia44/: test_client.py  test_endpoint.py  test_parser.py  test_validations.py
tests/core/idf/: test_client.py  test_endpoint.py  test_parser.py  test_validations.py
tests/core/whole/: test_client.py  test_endpoint.py  test_parser.py  test_validations.py
tests/fixtures/: missing_amap_nom.html  missing_partage_adresse.html
tests/fixtures/hn/: amap_detail.html  amap_list.html  farm_detail.html  farm_list.html  no_amaps.html  no_contact.html
tests/fixtures/ia44/: amap_detail.html  amap_list.html  empty.html  farm_detail.html  farmer_list.html  no_contact.html
tests/fixtures/idf/: amap_list.html  missing_partage_nom.html  no_container.html
tests/fixtures/whole/: dept_page.html  empty.html  index_page.html
