[project]
name = "amap-collector"
version = "0.1.1"
authors = [
    { name = "Enrico Fusto", email = "enrico.fusto@protonmail.com" }
]
description = "A simple collector of the french AMAP network in a structured way."
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["amap", "france", "scraper", "food"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
    "typer>=0.24.1",
]

[project.scripts]
amap_collector = "amap_collector.cli.params:app"

[project.urls]
Homepage = "https://github.com/rikettsie/amap-collector-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
